# gachadata-server

./: .envrc  .gitignore  Dockerfile  README.md  renovate.json  rust-toolchain.toml
.github/workflows/: build-and-release.yml  ci.yml
server/: Cargo.toml
server/src/: main.rs
