[package]
name = "gachadata-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
axum = "=0.8.8"
bytes = "=1.11.1"
envy = "=0.4.2"
# default featureは推移的にnative-tls featureを有効しているため、native-tls (LinuxではOpenSSL) を連れてくる。これをオプトアウトするためにrustlsを使う。
sentry = { version = "=0.46.2", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "tracing", "debug-images", "rustls", "tower", "tower-http"] }
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.49.0", features = ["full"] }
tower = "=0.5.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["std", "registry", "env-filter"] }
